Fixed letter-spacing on article pages

--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ footer#site-footer {
     color: #433f3f; }
   .card.story .category {
     bottom: 15px;
-    color: #2882c8; }
+    color: #2882C8; }
   .card.story :not(.card-image) {
     z-index: 2; }
   .card.story .card-image {
@@ -492,14 +492,14 @@ footer#site-footer {
       color: white;
       font-family: "Avenir", "Helvetica-Neue", "Arial", "Helvetica", sans-serif;
       text-transform: uppercase;
-      background-color: #2882c8;
+      background-color: #2882C8;
       width: 100%;
       margin: 0;
       padding: 15px 0 15px 0;
       letter-spacing: 0.15em;
       box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16); }
     .card.cross-campus time {
-      color: #2882c8;
+      color: #2882C8;
       margin: 0;
       position: relative;
       bottom: 0;
@@ -514,7 +514,7 @@ footer#site-footer {
     .card.cross-campus p.date {
       text-transform: uppercase;
       letter-spacing: 0.05em;
-      color: #2882c8;
+      color: #2882C8;
       font-weight: 800;
       margin-bottom: 15px; }
     .card.cross-campus .intro {
@@ -574,7 +574,7 @@ a.link-wrap {
 .cover-story {
   width: 100%;
   height: 500px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, black 100%), url("../images/lux.png") no-repeat;
+  background: linear-gradient(to bottom, transparent 0%, black 100%), url("../images/lux.png") no-repeat;
   background-size: cover;
   padding-top: 190px; }
   .cover-story h1 {
@@ -621,7 +621,8 @@ body.article-page .article-text {
     max-width: 960px; }
 body.article-page p {
   margin-top: 20px;
-  font-weight: normal; }
+  font-weight: normal;
+  letter-spacing: 0.01em; }
 body.article-page h3 {
   font-size: 1em;
   margin-top: 20px;
@@ -631,8 +632,8 @@ body.article-page .card {
   overflow: hidden;
   z-index: 2;
   float: right;
-  border-top: 5px solid #2882c8;
-  border-bottom: 5px solid #2882c8;
+  border-top: 5px solid #2882C8;
+  border-bottom: 5px solid #2882C8;
   padding: 10px 15px 10px 15px;
   font-weight: normal;
   height: auto; }
@@ -641,13 +642,15 @@ body.article-page .card {
     margin-top: 10px;
     font-style: italic;
     font-weight: 600;
-    line-height: 1.2; }
+    line-height: 1.2;
+    letter-spacing: 0.025em; }
   body.article-page .card a {
     text-decoration: none;
     display: block;
     margin: 20px 0px;
     color: black;
-    font-size: 13px; }
+    font-size: 13px;
+    letter-spacing: 0; }
 body.article-page .bottom-bar {
   position: fixed;
   left: 0px;
@@ -873,10 +876,10 @@ header#site-header {
         position: absolute;
         right: 0px;
         top: 49px;
-        border: 1px solid #2882c8; }
+        border: 1px solid #2882C8; }
       header#site-header nav#site-navigation #nav-search:hover {
         cursor: pointer;
-        background-color: #2882c8;
+        background-color: #2882C8;
         color: white; }
         header#site-header nav#site-navigation #nav-search:hover .search-box {
           display: block; }
@@ -892,13 +895,13 @@ form input {
   font-size: 0.9em; }
 
 .university {
-  color: #2882c8 !important; }
+  color: #2882C8 !important; }
   .university .category-jump {
-    background-color: #2882c8; }
+    background-color: #2882C8; }
   .university .story .category {
-    color: #2882c8; }
+    color: #2882C8; }
   .university .card {
-    border-bottom: thick solid #2882c8; }
+    border-bottom: thick solid #2882C8; }
 
 .opinion {
   color: #cf383e !important; }
@@ -971,3 +974,5 @@ form input {
     color: #42d2ff; }
   .sports .card {
     border-bottom: thick solid #42d2ff; }
+
+/*# sourceMappingURL=style.css.map */
